mudança na paleta de cor, correção de bugs nos chats e adição da lixeira para exclusão de chats

--- a/public/index.html
+++ b/public/index.html
@@ -39,14 +39,7 @@
       </div>
 
       <div class="chats-list" id="chats-list">
-        <div class="chat-item" id="chat-item-template" style="display: none;">
-          <div class="chat-avatar">A</div>
-          <div class="chat-details">
-            <h4 class="chat-name">Amigo</h4>
-            <p class="chat-last-message">Última mensagem...</p>
-          </div>
-          <span class="chat-time">10:30</span>
-        </div>
+        <!-- Chats aparecem aqui via JS -->
       </div>
     </div>
 
@@ -97,6 +90,6 @@
     </div>
   </div>
 
-  <script src="client.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
