--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chat P2P Descentralizado</title>
-  <link rel="stylesheet" href="/public/css/styles.css" />
-  <link rel="stylesheet" href="/public/css/usuarioCaixa.css">
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/usuarioCaixa.css">
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -59,13 +59,13 @@
     </div>
 
     <div class="message-input-container" style="display:none;">
-      <input
-        type="text"
+      <button id="emoji-btn" title="Emoji">😊</button>
+      <textarea
         class="message-input"
         id="message-input"
         placeholder="Digite sua mensagem..."
-        autocomplete="off"
-      />
+        rows="1"
+      ></textarea>
       <button class="send-btn" id="send-btn">
         <i class="fas fa-paper-plane"></i>
       </button>
@@ -97,7 +97,6 @@
     <button id="username-submit-btn">Salvar</button>
   </div>
 </div>
-
   <script type="module" src="js/app.js"></script>
 </body>
 </html>
